# pointr

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  suggestions.md
backend/: .dockerignore  Dockerfile  README.md  config.py  geo_pb2.py  geo_pb2_grpc.py  main.py  pyproject.toml
common/: dev_server.py
demo-data/: gamla-stan-upload-ambiguous.geojson  gamla-stan-upload-unmapped.geojson  gamla-stan-upload.geojson  init.sql
docs/: data-sources.md  data-upload.md  env.md  logging.md  projects.md  proto-grpc.md
enrichment/: .dockerignore  Dockerfile  README.md  config.py  dev_server.py  main.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  config.js  main.js
frontend/src/lib/: ContactsView.svelte  Counter.svelte  ListView.svelte  Map.svelte  ReconResults.svelte  ReconView.svelte  Topbar.svelte  api.js  businessCategories.js  colorUtils.js  sourceColors.js
frontend/src/lib/components/: ASNInfoSection.svelte  ApiDocsModal.svelte  CategoryFilter.svelte  ColumnMappingModal.svelte  DetailModal.svelte  DrawingToolbar.svelte  LocationSearchBar.svelte  PolygonListDropdown.svelte  RoutingPanel.svelte
geo/: Dockerfile  README.md  config.py  dev_server.py  geo_pb2.py  geo_pb2_grpc.py  main.py  pyproject.toml
logging/: loki-config.yml  promtail-config.yml
logging/grafana/dashboards/: docker-logs.json
nginx/: dev.conf  prod.conf
proto/: enrichment.proto  geo.proto  recon.proto
recon/: Dockerfile  README.md  config.py  dev_server.py  main.py  pyproject.toml  requirements.txt
(+11 files in other folders)
