[project]
name = "leadmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
leadmaker = "main:main"
