[project]
name = "geo"
version = "0.1.0"
description = "Geo data service: OSM enrichment + custom POI/area management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "shapely>=2.0.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "watchdog>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
]

[project.scripts]
geo = "main:serve"
