[project]
name = "recon"
version = "0.1.0"
description = "Domain reconnaissance gRPC service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "httpx>=0.26.0",
    "dnspython>=2.5.0",
    "python-whois>=0.9.3",
    "pydantic-settings>=2.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
recon = "main:serve"
